2005-12-10  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c:
	* src/merge-vcard.c:
		Fixed indentation.

2005-12-08  Jim Evins  <evins@snaught.com>

	* libglabels/paper.c: (read_paper_files_from_dir):
	* libglabels/template.c: (gl_template_register),
	(read_template_files_from_dir):
	* libglabels/xml-paper.c: (gl_xml_paper_read_papers_from_file),
	(gl_xml_paper_parse_papers_doc):
	* libglabels/xml-template.c:
	(gl_xml_template_read_templates_from_file),
	(gl_xml_template_parse_templates_doc),
	(gl_xml_template_parse_template_node),
	(xml_parse_label_rectangle_node), (xml_parse_label_round_node),
	(xml_parse_label_cd_node), (xml_parse_layout_node),
	(xml_parse_markup_margin_node), (xml_parse_markup_line_node),
	(xml_parse_markup_circle_node),
	(gl_xml_template_write_templates_to_file), (xml_create_label_node):
	* libglabels/xml.c: (gl_xml_get_prop_length):
		Re-classified g_warnings to g_messages.
	* src/Makefile.am:
	* src/glabels.c: (main):
	* src/warning-handler.c: (gl_warning_handler_init),
	(warning_handler):
	* src/warning-handler.h:
		Added warning message handler to make sure the user is
		presented with appropriate non-fatal errors.
	* src/critical-error-handler.c: (critical_error_handler):
		Changed exit to abort.
	* src/bc-gnubarcode.c: (gl_barcode_gnubarcode_new), (render_pass1):
	* src/bc-postnet.c: (postnet_code):
	* src/bc.c: (id_to_index), (name_to_index):
	* src/merge.c: (gl_merge_register_backend), (gl_merge_new):
	* src/object-editor.c: (gl_object_notebook_construct_valist):
	* src/prefs-dialog.c: (update_locale_page_from_prefs):
	* src/prefs.c: (gl_prefs_get_units_per_point),
	(gl_prefs_get_units_precision), (gl_prefs_get_units_step_size),
	(gl_prefs_get_units_string):
	* src/print.c: (draw_outline), (clip_to_outline), (clip_punchouts):
	* src/splash.c: (gl_splash):
	* src/ui-commands.c: (gl_ui_cmd_help_contents):
	* src/view-highlight.c: (gl_view_highlight_new),
	(highlight_resizable_box_construct), (object_changed_cb),